chore: add control.await_any test

--- a/neovim.yml
+++ b/neovim.yml
@@ -19,6 +19,7 @@ globals:
   assert.has.error:
     args:
       - type: function
+      - type: string
   assert.are_nil:
     args:
       - type: any
