chore: test fs_stat

--- a/neovim.yml
+++ b/neovim.yml
@@ -40,6 +40,9 @@ globals:
   assert.is.Nil:
     args:
       - type: any
+  assert.is.Not.Nil:
+    args:
+      - type: any
   before_each:
     args:
       - type: function
