--- a/.luarc.json
+++ b/.luarc.json
@@ -1,12 +1,11 @@
 {
   "$schema": "https://raw.githubusercontent.com/LuaLS/vscode-lua/master/setting/schema.json",
   "Lua.runtime.version": "LuaJIT",
-  "Lua.diagnostics.globals": [
-    "vim",
-  ],
+  "Lua.diagnostics.globals": ["vim"],
   "workspace.library": [
     "./lua",
     "${3rd}/busted/library",
     "${3rd}/luassert/library",
-  ],
+    "${3rd}/luv/library"
+  ]
 }
