--- a/.luarc.json
+++ b/.luarc.json
@@ -3,6 +3,7 @@
   "Lua.runtime.version": "LuaJIT",
   "Lua.diagnostics.globals": ["vim"],
   "workspace.library": [
+    "$VIMRUNTIME/lua/vim",
     "./lua",
     "${3rd}/busted/library",
     "${3rd}/luassert/library",
